[package]
name = "volt"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["examples/*"]

[workspace.dependencies]
volt = { version = "0.1", path = "." }

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
wgpu = "0.17"
winit = "0.28"
